began working on voice memo function
tried to implement using blob url, doesn't work, will have to save file in database

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,13 @@
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  background-color:rgba(0, 0, 0, 0.75);
+}
+
+.main{
+
+  
+}
 
 
 .fade-enter{
